tests/paczka1/fuzzy1/93877354.err
Error in line 3: 2nWG1agZe S696 27,0
Error in line 16: mgxpKq7QyFa A622 62,0
Error in line 19: mgxpKq7QyFa A941 18,9
Error in line 24: A622 A941 68,0
